deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: defense
  labels:
    name: defense
    app.kubernetes.io/managed-by: kubectl
